--- a/templates/list.jinja2
+++ b/templates/list.jinja2
@@ -7,10 +7,12 @@
   <body>
     <h1>Videos</h1>
 
-    <li>
-      {% for item in navigation %}
-      <ul></ul>
+    <ul>
+      {% for video_id in video_ids %}
+        <li>
+          <a href="/watch/{{video_id}}">{{ video_id }}</a>
+        </li>
       {% endfor %}
-    </li>
-  </body>  
+    </ul>
+  </body>
 </html>
