--- a/templates/list.jinja2
+++ b/templates/list.jinja2
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>List of videos</title>
-    <link rel="stylesheet" type="text/css" href="/static/css-reset.css">
+    <link rel="stylesheet" type="text/css" href="/static/reset.css">
     <link rel="stylesheet" type="text/css" href="/static/browse.css">
   </head>
 
@@ -11,12 +11,12 @@
 
     <div class="posters">
       {% for video in videos %}
-      <div class="poster">
-        <a href="/watch/{{video.video_id}}">
-          <img src="{{video.poster_url}}" alt="{{video.video_id}}">
-          {{ video_id }}
-        </a>
-      <div>
+        <div class="poster">
+          <a href="/watch/{{video.video_id}}">
+            <img src="{{video.poster_url}}" alt="{{video.video_id}}">
+            {{ video_id }}
+          </a>
+        <div>
       {% endfor %}
     </div>
 
