--- a/static/browse.css
+++ b/static/browse.css
@@ -5,11 +5,16 @@
 }
 
 .poster {
-    max-width: 375px;
-    max-height:;
+    width:200px;
+    height:300px;
+
+    background-color: #f1f1f1;
+
     overflow: hidden;
+
 }
 
 .poster img {
   max-width: initial; /* Maybe optional. See note below */
+  max-height: 100%;
 }
