--- a/templates/list.jinja2
+++ b/templates/list.jinja2
@@ -15,7 +15,7 @@
         <div class="poster">
           <a href="/watch/{{video.video_id}}">
             <img src="{{video.poster_url}}" alt="{{video.video_id}}">
-            <span class="title">{{ video.video_id }}<title>
+            <span class="title">{{ video.video_id }}</span>
           </a>
         <div>
       {% endfor %}
