--- a/templates/list.jinja2
+++ b/templates/list.jinja2
@@ -17,7 +17,7 @@
             <img src="{{video.poster_url}}" alt="{{video.video_id}}">
             <span class="title">{{ video.video_id }}</span>
           </a>
-        <div>
+        </div>
       {% endfor %}
     </div>
 
