--- a/templates/browse.jinja2
+++ b/templates/browse.jinja2
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<!-- todo rename to browse.jinja2 -->
 <html>
   <head>
     <title>List of videos</title>
-    <link rel="stylesheet" type="text/css" href="/static/reset.css">
-    <link rel="stylesheet" type="text/css" href="/static/browse.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/browse.css">
   </head>
 
   <body>
@@ -20,13 +19,5 @@
         </div>
       {% endfor %}
     </div>
-
-    <ul>
-      {% for video_id in video_ids %}
-        <li>
-          <a href="/watch/{{video_id}}">{{ video_id }}</a>
-        </li>
-      {% endfor %}
-    </ul>
   </body>
 </html>
