--- a/templates/upload.jinja2
+++ b/templates/upload.jinja2
@@ -1,16 +1,21 @@
 {% extends 'layout.jinja2' %}
 
-<title>Upload new File</title>
+{% block title %}Upload{% endblock %}
+
+{% block body %}
+
 <h1>Upload new File</h1>
 
-<form id="upload-form" method=post action=# enctype=multipart/form-data>
-  <input type=text name=title>
-  <input type=file name=file>
-  <input type=submit value=Upload>
-</form>
+  <form id="upload-form" method=post action=# enctype=multipart/form-data>
+    <input type=text name=title>
+    <input type=file name=file>
+    <input type=submit value=Upload>
+  </form>
 
-<label for="upload-progress">Upload Progress:</label>
-<progress id="uploadProgress"></progress>
+  <label for="upload-progress">Upload Progress:</label>
+  <progress id="uploadProgress"></progress>
 
-<!-- TODO move JS stuff to some type of block -->
-<script type="text/javascript" src="/static/js/upload.js"></script>
+  <!-- TODO move JS stuff to some type of block -->
+  <script type="text/javascript" src="/static/js/upload.js"></script>
+  
+{% endblock %}
