Fixing progress id

--- a/templates/upload.jinja2
+++ b/templates/upload.jinja2
@@ -13,7 +13,7 @@
   </form>
 
   <label for="upload-progress">Upload Progress:</label>
-  <progress id="uploadProgress"></progress>
+  <progress id="upload-progress"></progress>
 
   <!-- TODO move JS stuff to some type of block -->
   <script type="text/javascript" src="/static/js/upload.js"></script>
