--- a/templates/upload.jinja2
+++ b/templates/upload.jinja2
@@ -13,9 +13,9 @@
   </form>
 
   <label for="upload-progress">Upload Progress:</label>
-  <progress id="upload-progress"></progress>
+  <progress id="upload-progress" value=0 max=100></progress>
 
   <!-- TODO move JS stuff to some type of block -->
   <script type="text/javascript" src="/static/js/upload.js"></script>
-  
+
 {% endblock %}
